--- a/Finnish/main/Contacts.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Contacts.apk/res/values-fi-rFI/strings.xml
@@ -1,5 +1,8 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <!-- ei vielä käännetty -->
+  <string name="contact_detail_entry_pay_request">Request money</string>
+  <!-- ei vielä käännetty -->
   <string name="accessibility_calllog_detail">Puheluhistorian tiedot</string>
   <string name="accessibility_contact_detail">Yhteystiedon tiedot</string>
   <string name="account_container_title">Tuotu</string>
