--- a/Finnish/main/Notes.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Notes.apk/res/values-fi-rFI/strings.xml
@@ -1,5 +1,35 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <!-- ei vielä käännetty -->
+  <string name="application_icon">App icon</string>
+     <string name="audio_panel_time_counter_default">00:00</string>
+     <string name="audio_toast_file_invalid">Audio file is invalid</string>
+     <string name="audio_toast_file_undownload">Audio file is not fully downloaded or missing</string>
+     <string name="audio_toast_network_is_not_available">"Couldn't connect to the network"</string>
+     <string name="dlg_info_save_to_gallery_message">Saving image to Gallery…</string>
+     <string name="edit_header_lock_description">Secret note</string>
+     <string name="empty_folder_import_notes">Import notes</string>
+     <string name="empty_folder_no_notes">No notes here</string>
+     <string name="first_enter_custom_folder_hint">You can rename or delete folders here</string>
+     <string name="folder_operation_delete">Delete</string>
+     <string name="folder_operation_rename">Rename</string>
+     <string name="hide_arrow_description">Hide</string>
+     <string name="menu_add_audio_description">Add audio note</string>
+     <string name="rich_text_bold_description">Bold</string>
+     <string name="rich_text_center_description">Center</string>
+     <string name="rich_text_chooser_title">Select style</string>
+     <string name="rich_text_italic_description">Italic</string>
+     <string name="rich_text_right_description">Right</string>
+     <string name="rich_text_size_description">Size</string>
+     <string name="rich_text_underline_description">Underline</string>
+     <string name="save_to_gallery_failure_message">"Couldn't save to Gallery"</string>
+     <string name="save_to_gallery_icon_name">Save to Gallery</string>
+     <string name="save_to_gallery_success_message">Saved Image to Gallery successfully</string>
+     <string name="snippet_audio_stub">Voice Note</string>
+     <string name="toast_refuse_to_record_when_in_call">"Can't use this feature during calls"</string>
+     <string name="toolbar_text_description">Text style</string>
+     <string name="toolbar_voice_description">Voice</string>
+     <!-- ei vielä käännetty -->
   <string name="action_folder_description">Näytä kansiot</string>
   <string name="action_mode_switcher_grid_description">Ruudukkonäkymä</string>
   <string name="action_mode_switcher_list_description">Luettelonäkymä</string>
