--- a/Finnish/main/Provision.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Provision.apk/res/values-fi-rFI/strings.xml
@@ -1,5 +1,10 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <!-- ei vielä käännetty -->
+  <string name="sim_card_detection_mobile_not_available">"SIM card couldn't connect to the network"</string>
+     <string name="sim_scard_detecting_check_mobile_not_available">"Your SIM card couldn't connect to a valid carrier network. Make sure you have sufficient funds on your balance and try to connect again."</string>
+     <string name="start_up_slogan" />
+     <!-- ei vielä käännetty -->
   <string name="accessibility_enabled">Esteettömyys käytössä.</string>
   <string name="agree">Hyväksy</string>
   <string name="agree_terms">Olen lukenut ja hyväksyn Palveluehdot ja Tietosuojakäytännön.</string>
