--- a/Finnish/main/SecurityCenter.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/SecurityCenter.apk/res/values-fi-rFI/strings.xml
@@ -1,5 +1,15 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <!-- ei vielä käännetty -->
+  <string name="gamebox_qq_not_find">Install QQ and try again.</string>
+     <string name="gamebox_wechat_not_find">Install WeChat and try again.</string>
+     <string name="gb_msg_not_shielded_summary">Show</string>
+     <string name="gs_gamebox">In-game shortcuts</string>
+     <string name="gs_gamebox_detail">Show in-game shortcut panel</string>
+     <string name="midrop_post_notification_contentText">"Try Mi Drop. It's fast and ad-free."</string>
+     <string name="midrop_post_notification_contentTitle">Need to transfer files?</string>
+     <string name="screenrecord_not_find">Install the latest version of Screen Recorder and try again.</string>
+     <!-- ei vielä käännetty -->
   <string name="Phonepass">Salli puhelut</string>
   <string name="SMS_and_MMS">Teksti- ja multimediaviestit</string>
   <string name="SMSpass">Salli tekstiviestit</string>
