--- a/Finnish/main/Weather.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Weather.apk/res/values-fi-rFI/strings.xml
@@ -1,5 +1,10 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <!-- ei vielä käännetty -->
+  <string name="daily_forecast_add_city_add">Follow</string>
+     <string name="daily_forecast_add_city_message">Follow the weather in %1$s for a more detailed forecast.</string>
+     <string name="daily_forecast_add_city_title">Follow the weather in %1$s</string>
+     <!-- ei vielä käännetty -->
   <string name="abrupt_weather_settings_summary_type_a">Epätavallisen sään varoituksen valintakytkin</string>
   <string name="abrupt_weather_settings_summary_type_b">Epätavallisen sään varoituksen valintakytkin</string>
   <string name="abrupt_weather_settings_title">Epätavallisen sään varoitus</string>
