--- a/Finnish/main/CleanMaster.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/CleanMaster.apk/res/values-fi-rFI/strings.xml
@@ -1,9 +1,9 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <!-- ei vielä käännetty -->
-  <string name="clean_long_msg">"Cleaning %1$d files,%2$d finished 
-%3$d%% item/second remained time:%4$s"</string>
-  <!-- ei vielä käännetty -->
+  <!-- miui 10 valmis -->
+  <string name="clean_long_msg">"Puhdistetaan %1$d tiedostoa, %2$d valmiina 
+%3$d%% kohdetta/sekunti aikaa jäljellä:%4$s"</string>
+  <!-- miui 10 valmis -->
   <string name="RF_DalvikCacheLeftovers">软件的系统残留 (Dalvik-Cache)</string>
   <string name="activity_title_ad">Mainokset</string>
   <string name="activity_title_apk">Paketit</string>
