DeskClock.apk MIUI 10 valmis Käännettiin MIUI 9 -> 10 muutokset. countries_names_miui -> maiden nimet on vielä kääntämättä.

--- a/Finnish/main/DeskClock.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/DeskClock.apk/res/values-fi-rFI/strings.xml
@@ -1,52 +1,52 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <!-- ei vielä käännetty -->
-  <string name="alarm_clock_more_setting">Additional settings</string>
-  <string name="channel_name_alarm">Alarm</string>
-  <string name="channel_name_timer">Timer</string>
-  <string name="dialog_message_agree">Agree</string>
-  <string name="dialog_message_for_contact_permission">In order to make birthday alarms available, Clock needs to access your contacts. Agree?</string>
-  <string name="dialog_message_negative">"Don't agree"</string>
-  <string name="dynamic_alarm_speech">Smart alarm</string>
-  <string name="edit_alarm">Edit alarm</string>
-  <string name="module_download_cancel">Not now</string>
-  <string name="module_download_data_msg">"In order to make smart alarms, nature sounds, and birthday alarms available, Clock needs to connect to the internet and access your contacts. You'll also have to download additional audio. Use mobile data to download additional audio?"</string>
-  <string name="module_download_data_msg_golbal">In order to make smart alarms and nature sounds available, Clock needs to download additional audio. Use mobile data to download additional audio?</string>
-  <string name="module_download_fail">"Couldn't download additional audio"</string>
-  <string name="module_download_msg">"In order to make smart alarms, nature sounds, and birthday alarms available, Clock needs to connect to the internet and access your contacts. You'll also have to download additional audio. Agree?"</string>
-  <string name="module_download_msg_golbal">In order to make smart alarms and nature sounds available, Clock needs to download additional audio. Agree?</string>
-  <string name="module_download_no_network">"Couldn't connect to the network. Check your network settings and try again."</string>
-  <string name="module_download_ok">Agree &amp; download</string>
-  <string name="module_download_success">Downloaded additional audio successfully</string>
-  <string name="module_download_title">Additional audio required</string>
-  <string name="module_downloading">Downloading additional audio…</string>
-  <string name="monday_to_friday">Monday to Friday</string>
-  <string name="set_alarm_done">Done</string>
+  <!-- miui 10 valmis -->
+  <string name="alarm_clock_more_setting">Lisäasetukset</string>
+  <string name="channel_name_alarm">Hälytys</string>
+  <string name="channel_name_timer">Ajastin</string>
+  <string name="dialog_message_agree">Hyväksyn</string>
+  <string name="dialog_message_for_contact_permission">Jotta syntymäpäivähälytyksiä voidaan käyttää, Kello tarvitsee yhteystietojen käyttöoikeuden. Hyväksytö?</string>
+  <string name="dialog_message_negative">En hyväksy</string>
+  <string name="dynamic_alarm_speech">Älykäs hälytys</string>
+  <string name="edit_alarm">Muokkaa hälytystä</string>
+  <string name="module_download_cancel">Ei nyt</string>
+  <string name="module_download_data_msg">Jotta älykäs hälytys, luontoäänet ja syntymäpäivähälytykset voidaan ottaa käyttöön, Kello tarvitsee yhteystietojen käyttöoikeuden ja pääsyn internetiin. Sinun täytyy myös ladata ylimääräinen äänitiedosto. Käytetäänkö mobiilidataa ylimääräisen äänitiedoston lataamiseen?</string>
+  <string name="module_download_data_msg_golbal">Jotta älykäs hälytys ja luontoääniä voidaan käyttää, Kellon täytyy ladata ylimääräinen äänitiedosto. Käytetäänkö mobiilidataa ylimääräisen äänitiedoston lataamiseen?</string>
+  <string name="module_download_fail">Ylimääräistä äänitiedostoa ei voitu ladata</string>
+  <string name="module_download_msg">Jotta älykäs hälytys, luontoäänet ja syntymäpäivähälytykset voidaan ottaa käyttöön, Kello tarvitsee yhteystietojen käyttöoikeuden ja pääsyn internetiin. Sinun täytyy myös ladata ylimääräinen äänitiedosto. Sinun täytyy myös ladata ylimääräinen äänitiedosto. Hyväksytkö?</string>
+  <string name="module_download_msg_golbal">Jotta älykäs hälytys ja luontoäänet voidaan ottaa käyttöön, Kellon täytyy ladata ylimääräinen äänitiedosto. Hyväksytkö?</string>
+  <string name="module_download_no_network">Verkkoyhteyttä ei voitu muodostaa. Tarkista verkkoasetuksesi ja yritä uudelleen.</string>
+  <string name="module_download_ok">Hyväksyn &amp; lataa</string>
+  <string name="module_download_success">Ylimääräinen äänitiedosto ladattiin onnistuneesti</string>
+  <string name="module_download_title">Ylimääräinen äänitiedosto vaaditaan</string>
+  <string name="module_downloading">Ladataan ylimääräistä äänitiedostoa…</string>
+  <string name="monday_to_friday">Maanantaista Perjantaihin</string>
+  <string name="set_alarm_done">Valmis</string>
   <string name="time_picker_colon">:</string>
-  <string name="time_picker_label_hour">H</string>
+  <string name="time_picker_label_hour">T</string>
   <string name="time_picker_label_minute">M</string>
   <string name="time_picker_label_second">S</string>
-  <string name="timer_alert_type_beach">Beach</string>
-  <string name="timer_alert_type_forest">Forest</string>
-  <string name="timer_alert_type_mute">Default</string>
-  <string name="timer_alert_type_rain">Drizzle</string>
-  <string name="timer_alert_type_stove_fire">Stove fire</string>
-  <string name="timer_alert_type_summer_night">Summer night</string>
-  <string name="timer_cancel_timer">Cancel timer</string>
-  <string name="timer_continue_timer">Resume timer</string>
-  <string name="timer_pause_hint">Pause</string>
-  <string name="timer_pause_timer">Pause timer</string>
-  <string name="timer_running">Timer is running</string>
-  <string name="timer_running_hint">Continue</string>
-  <string name="timer_start_timer">Start timer</string>
-  <string name="worldclock_input_hint_text">Enter country or city</string>
-  <string name="worldclock_search_city">Select city</string>
-  <string name="worldclock_world_time">Time zones</string>
-  <string name="worldcolock_timezone_current">Current: %1$s</string>
-  <string name="worldcolock_timezone_date">MMM dd</string>
-  <string name="worldcolock_timezone_gap">Hour</string>
-  <string name="worldcolock_timezone_local">Same as local time</string>
-  <!-- ei vielä käännetty -->
+  <string name="timer_alert_type_beach">Ranta</string>
+  <string name="timer_alert_type_forest">Metsä</string>
+  <string name="timer_alert_type_mute">Oletus</string>
+  <string name="timer_alert_type_rain">Tihkusade</string>
+  <string name="timer_alert_type_stove_fire">Liesituli</string>
+  <string name="timer_alert_type_summer_night">Kesäyö</string>
+  <string name="timer_cancel_timer">Peruuta ajastin</string>
+  <string name="timer_continue_timer">Jatka ajastinta</string>
+  <string name="timer_pause_hint">Pysäytä</string>
+  <string name="timer_pause_timer">Pysäytä ajastin</string>
+  <string name="timer_running">Ajastin on käynnissä</string>
+  <string name="timer_running_hint">Jatka</string>
+  <string name="timer_start_timer">Käynnistä ajastin</string>
+  <string name="worldclock_input_hint_text">Syötä maa tai kaupunki</string>
+  <string name="worldclock_search_city">Valitse kaupunki</string>
+  <string name="worldclock_world_time">Aikavyöhykkeet</string>
+  <string name="worldcolock_timezone_current">Nykyinen: %1$s</string>
+  <string name="worldcolock_timezone_date">d.M.</string>
+  <string name="worldcolock_timezone_gap">Tunti</string>
+  <string name="worldcolock_timezone_local">Sama kuin paikallinen aika</string>
+  <!-- miui 10 valmis -->
   <string name="add_alarm">Lisää hälytys</string>
   <string name="add_timezone_title">Lisää aikavyöhyke</string>
   <string name="alarm_alert_alert_silenced">Herätys hiljennetään %d minuutin jälkeen.</string>
