--- a/Finnish/main/DownloadProviderUi.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/DownloadProviderUi.apk/res/values-fi-rFI/strings.xml
@@ -1,8 +1,8 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <!-- ei vielä käännetty -->
-  <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
-  <!-- ei vielä käännetty -->
+  <!-- miui 10 valmis -->
+  <string name="common_google_play_services_unknown_issue">Sovelluksella %1$s on ongelmia Google Play palveluiden kanssa. Yritä uudelleen.</string>
+  <!-- miui 10 valmis-->
   <string name="DOWNLOAD_UNIT_BIT">t</string>
   <string name="DOWNLOAD_UNIT_GB">Gt</string>
   <string name="DOWNLOAD_UNIT_KB">Kt</string>
