MiuiGallery.apk MIUI 10 valmis Käännettiin MIUI 9 -> 10 muutokset.

--- a/Finnish/main/MiuiGallery.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiGallery.apk/res/values-fi-rFI/strings.xml
@@ -1,47 +1,47 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <!-- ei vielä käännetty -->
-  <string name="ai_album_open_switch_button_title">Start analyzing photos</string>
-  <string name="ai_album_requesting_title">AI algorithm is still processing your photos. Come back in a while.</string>
-  <string name="ai_album_setting_sub_title">Allow AI algorithm to identify people, places, and objects on your photos so you could find them faster.</string>
-  <string name="ai_album_setting_title">Identify objects on photos</string>
-  <string name="search_empty_title">Find photos with specific people, places, and objects in your Gallery</string>
-  <string name="video_editor_adjust">Enhance</string>
-  <string name="video_editor_filter_and_regulator">Filters</string>
-  <string name="video_editor_filter_bailu">Dew</string>
-  <string name="video_editor_filter_heibai">B&amp;W</string>
-  <string name="video_editor_filter_jiaopian">Film</string>
-  <string name="video_editor_filter_jingmi">Calm</string>
-  <string name="video_editor_filter_nuancha">Tea</string>
-  <string name="video_editor_filter_origin">Original</string>
-  <string name="video_editor_filter_qingse">Youth</string>
+  <!-- miui 10 valmis -->
+  <string name="ai_album_open_switch_button_title">Aloita kuvien analysointi</string>
+  <string name="ai_album_requesting_title">AI-algoritmi käsittelee vielä kuviasi. Tule takaisin hetken kuluttua.</string>
+  <string name="ai_album_setting_sub_title">Salli AI-algoritmin tunnistaa henkilöitä, paikkoja ja kuvissa esiintyviä kohteita löytääksesi ne nopeammin.</string>
+  <string name="ai_album_setting_title">Tunnista kuvissa esiintyvät kohteet</string>
+  <string name="search_empty_title">Etsi kuvissa esiintyviä tiettyjä henkilöitä, paikkoja tai kohteita Galleriassasi</string>
+  <string name="video_editor_adjust">Paranna</string>
+  <string name="video_editor_filter_and_regulator">Suodattimet</string>
+  <string name="video_editor_filter_bailu">Kaste</string>
+  <string name="video_editor_filter_heibai">M&amp;V</string>
+  <string name="video_editor_filter_jiaopian">Elokuva</string>
+  <string name="video_editor_filter_jingmi">Rauhallinen</string>
+  <string name="video_editor_filter_nuancha">Tee</string>
+  <string name="video_editor_filter_origin">Alkuperäinen</string>
+  <string name="video_editor_filter_qingse">Nuoruus</string>
   <string name="video_editor_filter_wangshi">Retro</string>
-  <string name="video_editor_filter_xiaosenlin">Grove</string>
-  <string name="video_editor_intelligent_special_effect">Effects</string>
-  <string name="video_editor_regulator">Adjust</string>
-  <string name="video_editor_smart_effect_beat">Beats</string>
-  <string name="video_editor_smart_effect_big_film">Epic</string>
-  <string name="video_editor_smart_effect_cadence">Rhythm</string>
-  <string name="video_editor_smart_effect_dynamic">Dynamic</string>
-  <string name="video_editor_smart_effect_fastslow">Motion</string>
-  <string name="video_editor_smart_effect_freesze">Stop motion</string>
+  <string name="video_editor_filter_xiaosenlin">Metsikkö</string>
+  <string name="video_editor_intelligent_special_effect">Tehosteet</string>
+  <string name="video_editor_regulator">Säädä</string>
+  <string name="video_editor_smart_effect_beat">Biitti</string>
+  <string name="video_editor_smart_effect_big_film">Eeppinen</string>
+  <string name="video_editor_smart_effect_cadence">Rytmikäs</string>
+  <string name="video_editor_smart_effect_dynamic">Dynaaminen</string>
+  <string name="video_editor_smart_effect_fastslow">Liike</string>
+  <string name="video_editor_smart_effect_freesze">Pysäytä liike</string>
   <string name="video_editor_smart_effect_halo">Halo</string>
-  <string name="video_editor_smart_effect_high_iframes_text">This effect works best with high frame rate videos.</string>
-  <string name="video_editor_smart_effect_movie">Movie</string>
-  <string name="video_editor_smart_effect_none">None</string>
-  <string name="video_editor_smart_effect_radical">Upbeat</string>
-  <string name="video_editor_smart_effect_rhythm">Pulse</string>
-  <string name="video_editor_smart_effect_street">Metropolis</string>
-  <string name="video_editor_smart_effect_time_limit_txt_40">You can apply this effect to videos which are up to 40 seconds long.</string>
-  <string name="video_editor_smart_effect_time_limit_txt_6">You can apply this effect to videos which are at least 6 seconds long.</string>
-  <string name="video_editor_smart_effect_time_limit_txt_60">You can apply this effect to videos which are up to 60 seconds long.</string>
-  <string name="video_editor_text_edit_all">All</string>
-  <string name="video_editor_text_edit_input_all_hint">Enter text</string>
-  <string name="video_editor_unzip_file_fail">"Couldn't unpack video."</string>
-  <string name="video_editor_video_is_short">"Can't edit this video."</string>
-  <string name="video_editor_watermark">Watermark</string>
-  <string name="voice_assistant">Voice input</string>
-  <!-- ei vielä käännetty -->
+  <string name="video_editor_smart_effect_high_iframes_text">Tämä tehoste toimii parhaiten korkeilla ruudunpäivitysnopeuden videoilla.</string>
+  <string name="video_editor_smart_effect_movie">Elokuva</string>
+  <string name="video_editor_smart_effect_none">Ei mitään</string>
+  <string name="video_editor_smart_effect_radical">Myönteinen</string>
+  <string name="video_editor_smart_effect_rhythm">Pulssi</string>
+  <string name="video_editor_smart_effect_street">Metropoli</string>
+  <string name="video_editor_smart_effect_time_limit_txt_40">Voit asettaa tämän tehosteen videoihin, jotka ovat enintään 40 sekuntia pitkiä.</string>
+  <string name="video_editor_smart_effect_time_limit_txt_6">Voit asettaa tämän tehosteen videoihin, jotka ovat vähintään 6 sekuntia pitkiä.</string>
+  <string name="video_editor_smart_effect_time_limit_txt_60">Voit asettaa tämän tehosteen videoihin, jotka ovat enintään 60 sekuntia pitkiä.</string>
+  <string name="video_editor_text_edit_all">Kaikki</string>
+  <string name="video_editor_text_edit_input_all_hint">Syötä teksti</string>
+  <string name="video_editor_unzip_file_fail">Videota ei voitu purkaa.</string>
+  <string name="video_editor_video_is_short">Tätä videota ei voi muokata.</string>
+  <string name="video_editor_watermark">Vesileima</string>
+  <string name="voice_assistant">Äänisyöte</string>
+  <!-- miui 10 valmis -->
   <string name="accept">Hyväksy</string>
   <string name="accept_or_deny">%1$s jakoi albumin %2$s kanssasi.</string>
   <string name="actionbar_overflow_item_desc">Lisävalinnat</string>
